# gspeech

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: Speech.msg
src/gspeech/: gspeech.py  gspeech_node.py
src/hwctrl/: keyboard.py  remote.py
src/wsapi/: asr-widget.html  full-asr.html  roswsapi.html  roswsapi.js
